Add onboarding automation with CI